<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Intro Screen</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="total">Your total is 0</string>
    <string name="add">Add one</string>
    <string name="sub">Subtract one</string>
    <string name="invalid">invalid</string>
    <string name="buttonhint">Type a Command</string>
    <string name="buttontext">Try Command</string>
	<string name="email">Email Address(es)</string>
	<string name="intro">Introduction</string>
	<string name="person_name">Person Name</string>	
	<string name="complaints">Complaints about person</string>
	<string name="suggestions">Suggestions</string>
	<string name="remarks">Remarks</string>
	<string name="sendbutton">Send Email</string>
	<string name="wallpaperbutton">Set Wallpaper</string>
	<string name="startactivity">Start Activity</string>
	<string name="startactivityforresult">Start Activity For Result</string>
</resources>
