<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:weightSum="100">

    <ScrollView android:layout_weight= "30" android:layout_width = "fill_parent" android:layout_height = "fill_parent">
    
    
    <LinearLayout android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email" />

    <EditText
        android:id="@+id/etEmails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro" />

    <EditText
        android:id="@+id/etIntro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/person_name" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/complaints" />

    <EditText
        android:id="@+id/etThings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/suggestions" />

    <EditText
        android:id="@+id/etAction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remarks" />

    <EditText
        android:id="@+id/etOutro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />

    </LinearLayout>
    </ScrollView>
    
    <LinearLayout android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:layout_weight= "40"
    android:orientation="vertical">

    <Button
        android:id="@+id/bSentEmail"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:text="@string/sendbutton" />

	</LinearLayout>
   
    <LinearLayout android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:layout_weight= "30">
    <AnalogClock
        android:id="@+id/analogClock1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />
	</LinearLayout>
    
</LinearLayout>
