<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <EditText
        android:id="@+id/etCommands"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10" 
        android:hint = "@string/buttonhint"
        android:password = "true"/>

    
   <LinearLayout android:layout_width = "fill_parent"
       android:layout_height = "wrap_content"
       android:orientation = "horizontal"
       android:weightSum="100">
    <Button
        android:id="@+id/bResults"
        android:layout_weight = "20"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="fill_parent"
        android:padding="10sp"
        android:layout_height="wrap_content"
        android:text="@string/buttontext" />

    <ToggleButton
        android:id="@+id/tbPassword"
        android:layout_weight = "80"
        android:layout_width="fill_parent"
        android:checked = "true"
        android:layout_height="wrap_content"
        android:padding="10sp"
        android:text="ToggleButton" />

    </LinearLayout> 
    
    <TextView
        android:id="@+id/tvResults"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/invalid" />

</LinearLayout>
